--- a/resources/css/show.css
+++ b/resources/css/show.css
@@ -343,6 +343,23 @@ body {
     fill: #fbbf24; /* Couleur jaune */
 }
 
+.comment-notes {
+    display: flex;
+    align-items: center;
+    font-size: 1rem;
+    color: #2c2f32;
+    padding-right: 10px;
+}
+
+.comment-notes svg {
+    width: 28px;
+    height: 28px;
+    margin-right: 4px;
+    margin-left: -8px;
+    color: #2c2f32;
+    fill: #fbbf24; /* Couleur jaune */
+}
+
 .post-title {
     font-size: 2.5rem; /* Slightly reduced from 1.875rem */
     font-weight: 700;
@@ -490,5 +507,66 @@ body {
     margin-top: 0.25rem;
 }
 
+
+/*Notes*/
+
+* {
+    box-sizing: border-box;
+}
+
+:root {
+    --on-color: #ffc107;
+    --off-color: #666;
+    background-color: var(--background-color);
+}
+
+.rating {
+    list-style: none;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    gap: 0 4px;
+    height: 40px;
+}
+
+.rating-button {
+    appearance: none;
+    background: none;
+    outline: none;
+    border: none;
+    margin-bottom: 20px;
+    padding: 0;
+    height: 100%;
+    cursor: pointer;
+    --transition-delay: 0s;
+}
+
+.rating--animatable .rating-button {
+    transition: 0.4s cubic-bezier(0.23, 1, 0.32, 1) transform;
+}
+
+.rating-button:active {
+    transform: scale(0.8);
+}
+
+.rating-button--active:active {
+    transform: scale(1.1);
+}
+
+.star {
+    transform: scale(0.5) rotate(0deg);
+    height: 100%;
+    color: var(--off-color);
+}
+
+.rating--animatable .star {
+    transition: 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) all;
+    transition-delay: var(--transition-delay);
+}
+
+.rating-button--active .star {
+    transform: scale(0.9) rotate(360deg);
+    color: var(--on-color);
+}
 
 
